Animation not updated when Container Query units are used https://bugs.webkit.org/show_bug.cgi?id=299952 rdar://162194744

Reviewed by Antti Koivisto and Anne van Kesteren.

Recompute keyframes when container query units are used for all types of animations,
not just CSS Animations.

* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/container-queries/container-units-animation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/container-queries/container-units-animation.html:
* Source/WebCore/animation/CSSAnimation.cpp:
(WebCore::CSSAnimation::keyframesRuleDidChange):
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::recomputeKeyframesAtNextOpportunity):
(WebCore::KeyframeEffect::keyframesRuleDidChange): Deleted.
* Source/WebCore/animation/KeyframeEffect.h:
* Source/WebCore/style/Styleable.cpp:
(WebCore::Styleable::queryContainerDidChange const):

Canonical link: https://commits.webkit.org/301584@main